--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Islam'
 - !lcc 'BP'
+- GITenberg
 title: Notes on Islam
 url: http://www.gutenberg.org/ebooks/25254
